5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1723_2507.log
== TEST (2019-05-13 22:39:41) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:46:53) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:47:51) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:49:03) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("quantidade retirados pra venda: "))
	qi=qi+(qi*pc)-v
	t=t+1
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 22:56:03) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:02:55) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- EXECUTION TIME:
0.122988
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 23:02:58) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 23:03:37) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- EXECUTION TIME:
0.186352
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:03:00) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	qi=qi+(qi*pc)-v
	t=t+1
	v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:04:06) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
#v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("quantidade retirados pra venda: "))
	qi=qi+(qi*pc)-v
	t=t+1
	#v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:05:29) 
-- CODE:
qi=int(input("quantidade inicial de pirarucu: "))
pc=int(input("percentual de crescimento: "))/100
#v=int(input("quantidade retirados pra venda: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("quantidade retirados pra venda: "))
	qi=qi+(qi*pc)-v
	t=t+1
	#v=int(input("quantidade retirados pra venda: "))
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")
print(t)	
-- EXECUTION TIME:
0.134193
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:28:11) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	qi=(qi+(qi*pc))-v
	t=t+1
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
print(mensagem)
print(t)
	v=int(input("venda mensal: "))

-- ERROR:
File "XXXX", line 14
    v=int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:28:23) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	qi=(qi+(qi*pc))-v
	t=t+1
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
print(mensagem)
print(t)
v=int(input("venda mensal: "))

-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:29:17) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	qi=(qi+(qi*pc))-v
	t=t+1
	v=int(input("venda mensal: "))
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
print(mensagem)
print(t)
#v=int(input("venda mensal: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:30:22) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	qi=(qi+(qi*pc))-v
	t=t+1
	#v=int(input("venda mensal: "))
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
	v=int(input("venda mensal: "))

print(mensagem)
print(t)
#v=int(input("venda mensal: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:30:56) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	qi=(qi+(qi*pc))-v
	t=t+1
	#v=int(input("venda mensal: "))
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
	v=int(input("venda mensal: "))

print(mensagem)
print(t)
#v=int(input("venda mensal: "))

-- EXECUTION TIME:
0.226289
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 13, in <module>
    v=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:32:21) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("venda mensal: "))
	qi=(qi+(qi*pc))-v
	t=t+1
	#v=int(input("venda mensal: "))
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
	v=int(input("venda mensal: "))

print(mensagem)
print(t)
#v=int(input("venda mensal: "))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:33:34) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("venda mensal: "))
	qi=(qi+(qi*pc))-v
	t=t+1
	
	if(qi<0):
		mensagem="ZERO"
	else:
		mensagem="MAXIMO"
print(mensagem)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:07) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("venda mensal: "))
	qi=(qi+(qi*pc))-v
	t=t+1
	
if(qi<=0):
	mensagem="ZERO"
else:
	mensagem="MAXIMO"
print(mensagem)
print(t)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    v=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:36:40) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("venda mensal: "))
	qi=(qi+(qi*pc))-v
	t=t+1
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")

print(t)


-- EXECUTION TIME:
0.132356
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 6, in <module>
    v=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:37:10) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
#v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("venda mensal: "))
	qi=(qi+(qi*pc))-v
	t=t+1
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")

print(t)


-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 19:37:47) 
-- CODE:
qi=int(input("quantidade de peixe no tanque: "))
pc=int(input("percentual de crescimento: "))/100
#v=int(input("venda mensal: "))
t=0
while(qi>0 and qi<8000):
	v=int(input("venda mensal: "))
	qi=(qi+(qi*pc))-v
	t=t+1
	
if(qi<=0):
	print("ZERO")
else:
	print("MAXIMO")

print(t)


-- EXECUTION TIME:
0.155044
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
